--- a/src/BigO.Core/BigO.Core.csproj
+++ b/src/BigO.Core/BigO.Core.csproj
@@ -17,6 +17,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <Authors>Omar Besiso</Authors>
+    <Version>1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
