--- a/src/BigO.Core/BigO.Core.csproj
+++ b/src/BigO.Core/BigO.Core.csproj
@@ -17,7 +17,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <Authors>Omar Besiso</Authors>
-    <Version>2.0.0.0</Version>
+    <Version>2.0.3.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -33,6 +33,10 @@
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </Resource>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Resources\NewFolder\" />
 	</ItemGroup>
 
 </Project>
